# job_fit_analyser

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
src/: analyser.py  charts.py  cv_parser.py
tests/: test_analyser.py
