[project]
name = "job-fit-analyser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.30.0",
    "pandas>=2.2.0",
    "pdfplumber>=0.11.0",
    "plotly>=5.22.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.35.0",
]
